@@ -188,6 +188,7 @@ module ActiveScaffold::DataStructures
     #   :before
     #   :replace
     #   :after
+    #   :table
     #   false (no attempt at positioning)
     attr_writer :position
     def position
