@@ -2,6 +2,7 @@
 - Add partial list_messages_content to reduce code duplication, and better support replacing list view with other way to render records
 - Support selector for records body in create_record_row JS method, better support replacing list view with other way to render records
 - Improve detection of member action links when list view is replaced with other structure, based on 'record' html class, instead of tags
+- Support :table position for member action links, replacing the whole table
 
 = 3.7.10
 - Move code from on_create.js.erb to partials, so it's easier to change parts, e.g. how new record is rendered
